fix: fixed misaligned image when data populates

--- a/src/Components/User/User.scss
+++ b/src/Components/User/User.scss
@@ -7,12 +7,22 @@
   line-height: 22px;
   align-items: center;
 
+  &__image-container {
+    width: 50%;
+    padding-left: 20%;
+  }
+
   &__image {
     border: 2px solid blue;
     width: 123px;
     height: 123px;
     margin-top: 1.5rem;
     margin-bottom: 1.875rem;
+  }
+
+  &__info {
+    flex-grow: -2;
+    width: 50%;
   }
 
   &__info > p {
